# PolyWorker

./: CMakeLists.txt  LICENSE  README.md  uncrustify.cfg
include/: BlockingFifo.hh  Flag.hh  Lock.hh  PolyWorker.hh  WorkerThread.hh
src/: Flag.cc  Lock.cc
templates/: Doxyfile.in
templates/googletest/: CMakeLists.txt.in
templates/include/: GlobalConfiguration.hh.in
test/: CMakeLists.txt  FlagTest.cc  MonoWorkerTest.cc  PolyWorkerTest.cc
